apps/neptune/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neptune
  labels:
    app.kubernetes.io/name: neptune
