apps/neptune/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neptune
  namespace: neptune
  labels:
    app.kubernetes.io/name: neptune
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: moonraker
      port: 7125
      targetPort: 7125
---
apiVersion: v1
kind: Endpoints
metadata:
  name: neptune
  namespace: neptune
  labels:
    app.kubernetes.io/name: neptune
subsets:
  - addresses:
      - ip: 192.168.1.54
    ports:
      - name: http
        port: 80
      - name: moonraker
        port: 7125
