apps/neptune/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neptune
  namespace: neptune
  labels:
    app.kubernetes.io/name: neptune
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-local-network-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - neptune.kblab.me
      secretName: neptune-tls
  rules:
    - host: neptune.kblab.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neptune
                port:
                  number: 80
